docs: exam questions api docs
