# app/Http/Controllers/ExamQuestionsController.php
@@ -8,23 +8,58 @@ use Illuminate\Http\Request;
 class ExamQuestionsController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *      path="/api/v1/exam-questions",
+     *      tags={"Exam Questions"},
+     *      @OA\Response(
+     *          response="200",
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  @OA\Property(property="exam_id", type="integer", example="1"),
+     *                  @OA\Property(property="question_id", type="integer", example="1"),
+     *                  @OA\Property(property="answer", type="string"),
+     *                  @OA\Property(property="answer_time", type="string", format="email"),
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="Unauthorized"
+     *      ),
+     * )
      */
     public function index()
     {
-        //
+        $examQuestions = ExamQuestions::all();
+        return $examQuestions;
     }
 
-    /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
-    {
-        //
-    }
-
-    /**
-     * Store a newly created resource in storage.
+        /**
+     * @OA\Post(
+     *      path="/api/v1/exam-questions",
+     *      tags={"Exam Questions"},
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(property="exam_id", type="integer"),
+     *              @OA\Property(property="question_id", type="integer"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="message", type="string", example="Successfully created"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="Unauthorized"
+     *      ),
+     * )
      */
     public function store(Request $request)
     {
@@ -41,40 +76,6 @@ class ExamQuestionsController extends Controller
             'question_id' => $request->question_id,
         ]);
 
-        return response('question {$newExamQuestion->question_id} is successfully added to exam {$newExamQuestion->exam_id}');
+        return response()->json(["message" => 'question {$newExamQuestion->question_id} is successfully added to exam {$newExamQuestion->exam_id}']);
     }
-
-    /**
-     * Display the specified resource.
-     */
-    public function show(ExamQuestions $examQuestions)
-    {
-        //
-    }
-
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(ExamQuestions $examQuestions)
-    {
-        //
-    }
-
-    /**
-     * Update the specified resource in storage.
-     */
-    public function update(Request $request, ExamQuestions $examQuestions)
-    {
-        //
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     */
-    public function destroy(ExamQuestions $examQuestions)
-    {
-        //
-    }
-
-
 }
