# storage/api-docs/api-docs.json
@@ -8,6 +8,231 @@
         "version": "0.1.0"
     },
     "paths": {
+        "/api/v1/questions": {
+            "get": {
+                "tags": [
+                    "Questions"
+                ],
+                "operationId": "0130ca7d921bfa1a702a7d5835fdbc4e",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "question_id": {
+                                                "type": "integer"
+                                            },
+                                            "creator": {
+                                                "type": "integer"
+                                            },
+                                            "answer": {
+                                                "type": "string"
+                                            },
+                                            "subject": {
+                                                "type": "string"
+                                            },
+                                            "is_accepted": {
+                                                "type": "boolean"
+                                            },
+                                            "is_draft": {
+                                                "type": "boolean"
+                                            },
+                                            "type": {
+                                                "type": "intiger",
+                                                "format": "email",
+                                                "enum": [
+                                                    "1",
+                                                    "2",
+                                                    "3"
+                                                ]
+                                            },
+                                            "level": {
+                                                "type": "intiger",
+                                                "format": "email",
+                                                "enum": [
+                                                    "1",
+                                                    "2",
+                                                    "3"
+                                                ]
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Questions"
+                ],
+                "operationId": "c60ddb81afb64de4ab4414201349d8b1",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "teacher_id": {
+                                        "type": "integer"
+                                    },
+                                    "about": {
+                                        "type": "string"
+                                    },
+                                    "question": {
+                                        "type": "string"
+                                    },
+                                    "answer": {
+                                        "type": "string"
+                                    },
+                                    "creator": {
+                                        "type": "integer"
+                                    },
+                                    "subject": {
+                                        "type": "string"
+                                    },
+                                    "type": {
+                                        "type": "string",
+                                        "enum": [
+                                            "1",
+                                            "2",
+                                            "3"
+                                        ]
+                                    },
+                                    "level": {
+                                        "type": "string",
+                                        "enum": [
+                                            "1",
+                                            "2",
+                                            "3"
+                                        ]
+                                    },
+                                    "is_accepted": {
+                                        "type": "boolean"
+                                    },
+                                    "is_draft": {
+                                        "type": "boolean"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "question created successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Question not found"
+                    }
+                }
+            }
+        },
+        "/api/v1/questions/{id}": {
+            "post": {
+                "tags": [
+                    "Questions"
+                ],
+                "operationId": "show",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The ID of the user",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "teacher_id": {
+                                            "type": "integer"
+                                        },
+                                        "about": {
+                                            "type": "string"
+                                        },
+                                        "question": {
+                                            "type": "string"
+                                        },
+                                        "answer": {
+                                            "type": "string"
+                                        },
+                                        "creator": {
+                                            "type": "integer"
+                                        },
+                                        "subject": {
+                                            "type": "string"
+                                        },
+                                        "type": {
+                                            "type": "string",
+                                            "enum": [
+                                                "1",
+                                                "2",
+                                                "3"
+                                            ]
+                                        },
+                                        "level": {
+                                            "type": "string",
+                                            "enum": [
+                                                "1",
+                                                "2",
+                                                "3"
+                                            ]
+                                        },
+                                        "is_accepted": {
+                                            "type": "boolean"
+                                        },
+                                        "is_draft": {
+                                            "type": "boolean"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            }
+        },
         "/api/v1/question-requests": {
             "get": {
                 "tags": [
@@ -174,6 +399,99 @@
                 }
             }
         },
+        "/api/v1/subjects": {
+            "get": {
+                "tags": [
+                    "Subjects"
+                ],
+                "operationId": "82764cb1d84e0395e10670a8e49bea1b",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
+                                            },
+                                            "color": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Subject not found"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "operationId": "8c291ae52cae75d6cf4c697f31f9fe1e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "color": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "name": {
+                                            "type": "string"
+                                        },
+                                        "description": {
+                                            "type": "string"
+                                        },
+                                        "color": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
         "/api/v1/users/tokens": {
             "get": {
                 "tags": [
@@ -326,8 +644,7 @@
                                                 "format": "email"
                                             },
                                             "age": {
-                                                "type": "integer",
-                                                "minimum": 18
+                                                "type": "integer"
                                             }
                                         },
                                         "type": "object"
@@ -340,14 +657,12 @@
                         "description": "Unauthorized"
                     }
                 }
-            }
-        },
-        "//api/v1/users": {
+            },
             "post": {
                 "tags": [
                     "Users"
                 ],
-                "operationId": "34d247f28b01881da6400da643dec1f7",
+                "operationId": "ba548b97148bb5c0d8cab3bc3f128bfd",
                 "requestBody": {
                     "required": true,
                     "content": {
